[gd_scene load_steps=8 format=3 uid="uid://bexgy8ql8ny6u"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_ulik2"]
[ext_resource type="Texture2D" uid="uid://mlh063xenr1l" path="res://Assets/Images/Crosshair.png" id="2_7e61h"]
[ext_resource type="Texture2D" uid="uid://fskl5pwa6eqy" path="res://addons/kenney_prototype_textures/dark/texture_07.png" id="3_j0tue"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sckis"]
height = 1.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_nur0o"]
height = 1.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yem1q"]
albedo_texture = ExtResource("3_j0tue")
uv1_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_0owah"]
size = Vector2(100, 100)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
collision_layer = 2
script = ExtResource("1_ulik2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_sckis")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_nur0o")

[node name="cameraArm" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.983766, 0.179455, 0, -0.179455, 0.983766, 0, 3.18785, 0)
spring_length = 10.0
margin = 0.025

[node name="Camera3D" type="Camera3D" parent="cameraArm"]
transform = Transform3D(1, 0, 0, 0, 0.99531, -0.0967314, 0, 0.0967314, 0.99531, 0, 0.000153542, 9.99985)

[node name="Sprite2D" type="TextureRect" parent="cameraArm/Camera3D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7e61h")

[node name="muzzle" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.233742, -0.491809)

[node name="topCameraArmPos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.18434, 0)

[node name="bottomCameraArmPos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.390717, 0)

[node name="__debug_floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
visible = false
material_override = SubResource("StandardMaterial3D_yem1q")
mesh = SubResource("PlaneMesh_0owah")
